"finising first version"

--- a/sbc-template.bib
+++ b/sbc-template.bib
@@ -219,6 +219,10 @@
 @article{abeyratne2016blockchain,
   title={Blockchain ready manufacturing supply chain using distributed ledger},
   author={Abeyratne, Saveen A and Monfared, Radmehr P},
+  journal={International Journal of Research in Engineering and Technology},
+  volume={5},
+  number={9},
+  pages={1--10},
   year={2016},
   publisher={{\copyright} The Authors. Published by eSAT}
 }
@@ -332,6 +336,7 @@
 @techreport{golan2004traceability,
   title={Traceability in the US food supply: economic theory and industry studies},
   author={Golan, Elise H and Krissoff, Barry and Kuchler, Fred and Calvin, Linda and Nelson, Kenneth E and Price, Gregory K},
+  institution={e U.S. Department of Agriculture (USDA)},
   year={2004}
 }
 @article{vargas2017trazabilidad,
@@ -361,10 +366,6 @@
   year={2015},
   howpublished={\url{https://www.provenance.org/whitepaper}},
   note={[Online; accessed 17-september-2019]} 
-}
-@article{horiuchirastreabilidade,
-  title={RASTREABILIDADE DE UM MODELO DE CADEIA PRODUTIVA AGR{\'I}COLA GENERALIZADO EM UMA REDE BLOCKCHAIN},
-  author={HORIUCHI, FELIPE SEITI}
 }
 
 @book{gryna1998juran,
