--- a/sections/3_GENERAL_CONTEXT.tex
+++ b/sections/3_GENERAL_CONTEXT.tex
@@ -1,6 +1,6 @@
 \section{General Context} \label{sec:General}
 
-There are billions of products being manufactured every day through complex supply chains that can extend to all parts of the world. However, there is very little information on how, when and where these products originated, manufactured and used during their life cycle \cite{horiuchirastreabilidade}.
+There are billions of products being manufactured every day through complex supply chains that can extend to all parts of the world. However, there is very little information on how, when and where these products originated, manufactured and used during their life cycle \cite{galvez2018future}.
 
 \subsection{Traceability}\label{sec:traceability}
 
@@ -10,8 +10,6 @@ In \cite{gryna1998juran, Opara2001} Traceability is defined as the ability to pr
 
 Supply chain visibility, or traceability, is one of the key challenges encountered in the business world, with most companies having little or no information about their own second and third-tier suppliers. Transparency and end-to-end visibility of the supply chain can help shape product, raw material, test control, and end product flow, enabling better operations and risk analysis to ensure better chain productivity \cite{abeyratne2016blockchain}.
 
-Aung and Chang \cite{aung2014traceability} and Golan \cite{golan2004traceability} set three main traceability objectives, namely: (1) better supply chain management, (2) product differentiation and quality assurance, and (3) better identification of non-compliant products. An additional objective is to maintain assurance of traceability in accordance with applicable regulations and standards.
-
 %inicio do general context antigo
 Traceability systems typically store information in standard databases controlled by service providers. This centralized data storage becomes a single point of failure and risks tampering. As consequence, these systems results in trust problem, such as fraud, corruption, tampering and falsifying information. Likewise, by being a single point of failure, centralized system is vulnerable to collapse \cite{tian2017supply}.
 
@@ -20,20 +18,14 @@ Nowadays, a new technology called the blockchain presents a whole new approach b
 
 \subsection{Supply Chain Management and blockchain}\label{sec:scm}
 
-In order to solve some problems with Supply chain visibility and traceability, many internet of things technologies, such as RFID and wireless sensor network-based architectures and hardware, has been applied. However these technologies doesn't guarantee that the information shared by supply chain members in the traceability systems can be trusted \cite{tian2017supply}.
+In order to solve some problems with Supply chain traceability, many internet of things technologies, such as RFID and wireless sensor network-based architectures has been applied. However these technologies doesn't guarantee that the information shared by supply chain members in the traceability systems can be trusted \cite{tian2017supply}.
 
-Blockchain and distributed ledger technology underpinning cryptocurrencies such as Bitcoin, represent a new and innovative technological approach to realizing decentralized trustless systems. Indeed, the inherent properties of this digital technology provide fault-tolerance, immutability, transparency and full traceability of the stored transaction records, as well as coherent digital representations of physical assets and autonomous transaction executions \cite{caro2018blockchain}.
+Instead of storing data in an shadowy network system, blockchain allow all the goods' information to be stored in a shared and transparent system for all the members along the supply chain \cite{tian2017supply}.
 
-Instead of storing data in an shadowy network system, blockchain allow all the goods' information to be stored in a shared and transparent system for all the members along the supply chain \cite{tian2017supply}. Monfared \cite{abeyratne2016blockchain} argued about the potential benefit of blockchain technology in manufacturing supply chain. They proposed that the inherited characteristics of the blockchain enhance trust through transparency and traceability within any transaction of data, goods, and financial resources. And it could offer an innovative platform for new decentralized and transparent transaction mechanism in industries and business.
-
-There are many members among the supply chain, including suppliers, producers, manufacturers, distributors, retailers, consumers and certifiers. Each of these members can add, update and check the information about the product on the blockchain as long as they register as a user in the system. Each product has also a unique digital cryptographic identifier that connects the physical items to their virtual identity in the system. This virtual identity can be seen as the product information profile. Users in the system also have their digital profile, which contains the information about their introduction, location, certifications, and association with products \cite{tian2017supply}.
-
-Smart contract encodes the combination of services and other conditions defined in the contract. Therefore, the smart contract can automatically verify and apply these conditions. It also verifies all information required by regulation to enable automated verification of regulatory compliance \cite{lu2017adaptable}. 
+There are many members among the supply chain, including suppliers, producers, manufacturers, distributors, retailers, consumers and certifiers. Each of these members can add, update and check the information about the product on the blockchain as long as they register as a user in the system. Each product has also a unique digital cryptographic identifier that connects the physical items to their virtual identity in the system. This virtual identity can be seen as the product information profile \cite{tian2017supply}.
 
 Since blockchain technology is still at an early stage of development, there is a general lack of standards for implementation. A blockchain must be universal and adaptable to specific situations \cite{valenta2017comparison}. In addition, the need to agree on a particular type of blockchain to be used puts the parties under pressure. This is a major disadvantage as blockchain technology is progressing rapidly, and predicting the best choice for the future is quite difficult \cite{galvez2018future}.
 
 On the other hand, there are advantages of applying the blockchain concept to a supply chain. One of the most important is: all stakeholders involved in the supply chain are motivated by the need to demonstrate to customers the superior quality of their methods and products \cite{lu2017adaptable}. 
 
-In addition to serving the functions of a traceability system, a blockchain can be used as a marketing tool. Because block chains are fully transparent\cite{iansiti2017truth} and participants can control the assets in them \cite{liao2011food}, they can be used to enhance image and reputation of a company \cite{van2007essentials}, drive loyalty among existing customers \cite{pizzuti2015global} and attract new ones \cite{svensson2009transparency}. 
-
-In fact, companies can easily distinguish themselves from competitors by emphasizing transparency and monitoring product flow along the chain. In addition, quickly identifying a source of contamination or loss can help protect a company's brand image \cite{mejia2010traceability} and alleviate the adverse impact of media criticism \cite{dabbene2011food}.
+In addition to serving the functions of a traceability system, a blockchain can be used as a marketing tool. As blockchains are fully transparent and participants can control the assets in them, they can be used to enhance image and reputation of a company \cite{van2007essentials}, drive loyalty among existing customers \cite{pizzuti2015global} and attract new ones \cite{svensson2009transparency}. In fact, companies can easily distinguish themselves from competitors by emphasizing transparency and monitoring product flow along the chain.
