--- a/sections/1_INTRODUCTION.tex
+++ b/sections/1_INTRODUCTION.tex
@@ -4,10 +4,12 @@ Hundreds of years ago, supply chains were fairly simple. Mines and farms provide
 
 %{\color{red}adicionar aqui texto sobre o problema atual da cadeia de suprimento.}
 
-In order to solve some problems that come with this complexity, such as supply chain visibility and traceability, many systems have been developed. However, these systems typically store information in standard databases controlled by service providers. This centralized data storage becomes a single point of failure and risks tampering. As a centralized organization, it can become a vulnerable target for bribery, and then the whole system can not be trusted anymore.
+In order to solve some problems that come with this complexity, such as supply chain visibility and traceability, many systems have been developed. However, these systems typically store information in standard databases controlled by service providers. This centralized data storage becomes a single point of failure and risks tampering. As a centralized organization, it can become a vulnerable target for bribery, and then the whole system can not be trusted anymore \cite{tian2017supply}.
 
 Blockchain and smart contracts could make supply chain management simpler and more transparent. The idea is to create a single source of information about products and supply chain via global ledger. Each component would have its own entry on the blockchain that gets tracked over time. Both untrust companies could then update the status of a good in real-time. The end result is once the clients receive their products they could track every piece back to its manufacturer \cite{greve2018blockchain}.
 
-Companies can also use the blockchain supply chain as a single source of truth for their products. They can manage and monitor risks within the supply chain, ensure quality of delivery and track the status of all components. Additionally companies can use smart contracts to manage and pay for supply chain autonomously. For example a chip manufacturer could be paid immediately upon testing of each individual chip at the assembly facility. This would reduce the need for large contract invoices on the back-and-forth of refund requests for faulty components. Those same smart contracts could assist with shipping and logistics tracking valuable products as they travel around the world. Using blockchain, companies can finally have a complete picture of their products at every stage in the supply chain, bringing transparency to the production process while reducing the cost of manufactured goods.
+Companies can also use the blockchain supply chain as a single source of truth for their products. They can manage and monitor risks within the supply chain, ensure quality of delivery and track the status of all components. Additionally companies can use smart contracts to manage and pay for supply chain autonomously. For example a chip manufacturer could be paid immediately upon testing of each individual chip at the assembly facility \cite{tian2017supply}. 
+
+This would reduce the need for large contract invoices on the back-and-forth of refund requests for faulty components. Those same smart contracts could assist with shipping and logistics tracking valuable products as they travel around the world. Using blockchain, companies can finally have a complete picture of their products at every stage in the supply chain, bringing transparency to the production process while reducing the cost of manufactured goods  \cite{swan2015blockchain}.
 
 This work presents Árion, a generic framework intended to be used in any kind of supply chain correlated to assets and products.
