--- a/sections/4_TECHNICAL_SPECIFICATION.tex
+++ b/sections/4_TECHNICAL_SPECIFICATION.tex
@@ -1,8 +1,7 @@
 \section{Technical Specification} \label{sec:Technical}
+The general objective of this work is to create a generic framework intended to be used in any kind of supply chain correlated to assets and products. Árion project is divided into three main modules described below: WebApp - FrondEnd, WebApp - BackEnd and Data Storage. Figure~\ref{fig:detalhamentotecnico} shows the application architecture and its components.
 
 Generally all SCM platform has three main items: Assets (the product or goods itself), steps (phases which products go through) and actors (people who interact with the products during the steps). The platform is based on this triad and it must be well defined on a new supply chain's creation. Initially, a configuration file in json format is generated and read in the blockchain platform, adding the main information for the correct functioning of the chain. The mechanism for creating this configuration file is detailed in the sections \Cref{sec:UserInteraction,sec:ServiceLayer}.
-
-The general objective of this work is to create a generic framework intended to be used in any kind of supply chain correlated to assets and products. Árion project is divided into three main modules described below: WebApp - FrondEnd, WebApp - BackEnd and Data Storage. Figure~\ref{fig:detalhamentotecnico} shows the application architecture and its components.
 
 %htbp
 \begin{figure}[ht]
@@ -14,12 +13,10 @@ The general objective of this work is to create a generic framework intended to 
 \end{figure}
 
 \subsection{WebApp - FrondEnd}\label{sec:WebAppFrondEnd}
-WebApp - FrontEnd is a client–server application which the client (including the user interface and client-side logic) runs in a web browser. This is a single-page application (SPA) that interacts with the user by dynamically rewriting the current page rather than loading entire new pages from a server. This approach avoids interruption of the user experience between successive pages, making the application behave more like a desktop application.
-
-The application is build with React (also known as React.js or ReactJS). This is a JavaScript library for building user interfaces. Used as a base in the development of single-page or mobile applications, React is optimal for fetching rapidly changing data that needs to be recorded. However, fetching data is only the beginning of what happens on a web page, which is why complex React applications usually require the use of additional libraries for state management, routing, and interaction with an API. The Webapp - FrontEnd is divided into two main blocks and these are classified according to the interactions: User Interaction Modules and Backend Interactions Services.
+WebApp - FrontEnd is a client–server application which the client (including the user interface and client-side logic) runs in a web browser. This is a single-page application (SPA) that interacts with the user by dynamically rewriting the current page rather than loading entire new pages from a server. The application is build with React (also known as React.js or ReactJS). The Webapp - FrontEnd is divided into two main blocks and these are classified according to the interactions: User Interaction Modules and Backend Interactions Services.
 
 \subsubsection{User Interaction}\label{sec:UserInteraction}
-The User Interaction modules are responsible for providing web pages that will be rendered on client’s web browser. These interactions are provided by web pages grouped by the following modules:
+User Interaction modules are responsible for providing web pages that will be rendered on client’s web browser. These interactions are provided by web pages grouped by the following modules:
 
 \begin{itemize}
 \item Login page
@@ -30,7 +27,7 @@ The User Interaction modules are responsible for providing web pages that will b
 \item Reporting module
 \end{itemize}
 
-The Login Module is responsible for display the login and authentication alternatives pages (‘forgot my password’, ‘reset my password’, etc.). The Application configuration module provides the features of creation/configuration of supply chain items and supply chain flows (steps). This module is responsible for get the information from the user that will be used for generate the configuration json file in the backend. This module provides the features for creation/configuration of Actors and Roles. These info will complement the main configuration file. The Data entry module provides form pages that allow the actors to enter data in the application, search and move assets from a step to another. The Data visualization module is responsible to display the information about assets in the supply chain flow through steps. In the Reporting module users can generate reports/files containing information organized in a narrative, graphic, or tabular form, prepared on ad hoc, periodic, recurring, regular, or as required basis. Reports may refer to specific periods, events, occurrences, or subjects, and may be presented in written form or any other format.
+The Login Module is responsible for display the login and authentication alternatives pages (‘forgot my password’, ‘reset my password’, etc.). The Application configuration module provides the features of creation/configuration of supply chain items and supply chain flows (steps). This module is responsible for get the information from the user that will be used for generate the configuration json file in the backend. User handling module provides the features for creation/configuration of Actors and Roles. These info will complement the main configuration file. The Data entry module provides form pages that allow the actors to enter data in the application, search and move assets from a step to another. The Data visualization module is responsible to display the information about assets in the supply chain flow through steps. In the Reporting module users can generate reports/files containing information organized in a narrative, graphic, or tabular form, prepared on ad hoc, periodic, recurring, regular, or as required basis. Reports may refer to specific periods, events, occurrences, or subjects, and may be presented in written form or any other format.
 
 \subsubsection{Backend Interaction}\label{sec:BackendInteraction}
 Backend interactions happen via a service layer consisting of:
@@ -44,30 +41,18 @@ Backend interactions happen via a service layer consisting of:
 \item Reporting service
 \end{itemize}
 
-The function of the Authentication Service is to request information from an authenticating party, and validate it against the configured identity repository using the specified authentication module. After successful authentication, the user session is activated and can be validated across all web applications participating in an Single Sign-On (SSO) environment. For example, when a user or application attempts to access a protected resource, credentials are requested by one (or more) authentication modules. Gaining access to the resource requires that the user or application be allowed based on the submitted credentials.
-
-Application setup service provides methods to configure and edit  supply chain items and supply chain flows, defining which steps and sub-tasks will be present in this flow and which information will be present in these steps. The User creation Service is responsible for the creation of users and roles, to allow them to log in and use the application’s features. Data entry service receives data from UI forms and send them to the backend to be processed and stored. Data visualization services provides information about the supply chain: Assets, actors and transactions, to be used by the data visualization module. Report services generate files (Doc/PDF/XSL, etc...) from a specific period of time with information about the supply chain.
+Authentication Service is responsible to request information from an authenticating party, and validate it against the configured identity repository using the specified authentication module. After successful authentication, the user session is activated and can be validated across all the web application. Application setup service provides methods to configure and edit  supply chain items and supply chain flows, defining which steps and sub-tasks will be present in this flow and which information will be present in these steps. The User creation Service is responsible for the creation of users and roles, to allow them to log in and use the application’s features. Data entry service receives data from UI forms and send them to the backend to be processed and stored. Data visualization services provides information about the supply chain: Assets, actors and transactions, to be used by the data visualization module. Report services generate files (Doc/PDF/XSL, etc...) from a specific period of time with information about the supply chain.
 
 \subsection{WebApp - BackEnd}\label{sec:WebAppBackEnd}
-WebApp - BackEnd is a Middleware that runs on the server. This Middleware (server-side software) facilitates client-server connectivity, forming a middle layer between the app(s) and the network: the server, the database, the operating system, and more. It receives requests from the clients (in this case, the WebApp - FrontEnd), and contains the logic to send the appropriate data back to the applicant, over HTTP and REST.  These are the main conventions that provide structure to the request-response cycle between clients and servers. Built with Node.js, This module  is composed by the API Gateway, Service Layer and Resource Locator more detailed below.
+WebApp - BackEnd is a Middleware that runs on the server facilitating the client-server connectivity, forming a middle layer between the app and the network: the server, the database, the operating system, and more. It receives requests from the WebApp - FrontEnd, and contains the logic to send the appropriate data back to the applicant, over HTTP and REST. Built with Node.js, This module  is composed by the API Gateway, Service Layer and Resource Locator more detailed below.
 
 \subsubsection{API Gateway}\label{sec:APIGateway}
-API Gateway is a managed service that enables easily create, publish, maintain, monitor and secure REST APIs to act as a "gateway" for applications to access data, business logic, or functionality in the backend services, such as workloads. The API Gateway provides a simple uniform view of external resources to the internals of an application. It manages all tasks involved in receiving and processing API calls, including traffic management, authorization and access control, monitoring and management of API versions.
-
-Basically, the Gateway is an interface that receives calls to its internal systems and can act in five different ways:
-
-\begin{itemize}
-\item Filter for call traffic from different media (web, mobile, cloud, among others);
-\item Single gateway to the various APIs you want to expose;
-\item Essential component of API management, as API Suite;
-\item Router: API and Rate Limit traffic router;
-\item Security engine with authentication, logging and more.
-\end{itemize}
+API Gateway is a managed service that enables easily create, publish, maintain, monitor and secure REST APIs to act as a "gateway" for applications to access data, business logic, or functionality in the backend services. The API Gateway provides a simple uniform view of external resources to the internals of an application. It manages all tasks involved in receiving and processing API calls, including traffic management, authorization and access control.
 
 Gateway access can be done from many different devices. Therefore, it must have the power to unify outgoing calls and be able to deliver to the user content that can be accessed from any browser and system. Gateways as a Security Feature: In the APIs world, one of the most subject talked about issues is always security, and having an API Gateway is one of the best solutions on the market to get full control of API’s, because this pattern addresses the so-called CIA (Confidentiality, Integrity, Availability) almost flawlessly.
 
 \subsubsection{Service Layer}\label{sec:ServiceLayer}
-A Service Layer defines an application's boundary [Cockburn PloP] and its set of available operations from the perspective of interfacing client layers. It encapsulates the application's business logic, controlling transactions and coordinating responses in the implementation of its operations.This module implements the service layer pattern and provides some benefits:
+A Service Layer defines an application's boundary and its set of available operations from the perspective of interfacing client layers. It encapsulates the application's business logic, controlling transactions and coordinating responses in the implementation of its operations.This module implements the service layer pattern and provides some benefits:
 
 \begin{enumerate}
 \item Centralizes external access to data and functions.
@@ -107,13 +92,15 @@ Before businesses transact with each other, they must define a common set of con
 
 Smart contracts have many APIs available to them. Critically, in all cases, whether transactions create, read, update or delete business objects in the world state, the blockchain contains an immutable record of these changes.
 
-The key feature of this project is how the chaincode is structured and how it works to achieve the goal of being able to be used in most of supply chains. The chaincode is written in Golang and declares a contract handling the reading and writing of strings to and from the world state. All contracts for use in chaincode must implement the contractapi.ContractInterface. 
+The key feature of this project is how the chaincode is structured and how it works to achieve the goal of being able to be used in most of supply chains. The chaincode is written in Golang and declares a contract handling the reading and writing of strings to and from the world state. All contracts for use in chaincode must implement the interface \textit{contractapi.ContractInterface}. 
+
+The \textit{main} function is the star point of the chaincode. It invokes the \textit{initLedger} function, reads the configuration files and raises the platform enabling users to interact with the blockchain via exposing its API's.
 
 A configuration file including the \textit{assetId}, a list of actors and a list of ordered steps is created from the application configuration module and read by the chaincode at the \textit{initLedger} and also from the \textit{createNewAsset} functions to configure the asset structure correctly and guarantee the steps sequence and the Actor rules.
 
 When creating an asset item an \textit{AssetItemId} is generated and this field is the order-tracking ID for the entire supply chain. Besides, each entity in the chain will have its unique entity ID and timestamp when it starts processing the transaction. By querying \textit{AssetItemId}, the user can easily track the current transaction information and status. In the final step, the blockchain will update \textit{deliverDate} and mark the status as completed once the last actor (generally the consumer) has received the order.
 
-There are create methods for each struct (Actor, Asset, Step, AssetItem) which are responsible for create an instance of these \textit{structs} and save the state into the blockchain. The query methods are responsible for interact with the information of any item in the blockchain. Basically there are three main actions to interact with the blockchain: 
+There are create methods for each struct (Actor, Asset, Step, AssetItem) which are responsible for create an instance of these \textit{structs} and save the state into the blockchain. Query methods are responsible for interact with the information of any item in the blockchain. Basically there are three main actions to interact with the blockchain: 
 
 \begin{itemize}
 \item A \textbf{get} typically represents a query to retrieve information about the current state of a business object.
@@ -122,7 +109,3 @@ There are create methods for each struct (Actor, Asset, Step, AssetItem) which a
 \end{itemize}
 
 \textit{ChangeAssetItemOwner} is the method called to update an asset item when it is moved from a step to another. It updates the \textit{CurrentOwnerId}, the \textit{ProcessDate}, information about prices and many other details of the transactions by the key/value map \textit{AditionalInfoMap}.
-
-The \textit{main} function is the star point of the chaincode. It invokes the \textit{initLedger} function, reads the configuration files and raises the platform enabling users to interact with the blockchain via exposing its API's.
-
-The ledger is composed by two parts: the world state and the blockchain. The world state is a database that stores (as a key value pair) the current values of all ledger states (all Chaincode states). It is populated when each peer validates and commits a transaction. The blockchain represents a transaction log that records all historical changes of the world state, and is a file-based ledger which stores an immutable sequence of blocks, and contains a set of ordered transaction data.
