--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-  Advances in information and communication technologies have reduced the physical, political and cultural barriers between nations. These technologies have enabled globalization to access raw materials, goods and services. The complex web of relationships that provide materials manufacture the components, assemble or mix the parts and deliver the final product to market is known as the supply chain. The rapid growth of internet technologies allowed the onset of  lots of emerging technologies applied in traceability systems, in supply chain area. However, these systems tend to be centralized, monopolistic, asymmetric and opaque. As consequence, these systems results in trust problem, such as fraud, corruption, tampering and falsifying information. Nowadays, a new technology called the blockchain presents a whole new approach based on decentralization. Nonetheless, by being in its early stages, it has some challenges to deal with, in which scalability and performance become  mainly  defiance to face the huge amount of data in the real world. This work is intended to provide a blockchain based framework in order to facilitate the development of applications for traceability in supply chain management.
+  Advances in information and communication technologies have reduced the physical, political and cultural barriers between nations. These technologies have enabled globalization to access raw materials, goods, and services. The complex web of relationships that provide materials manufacture the components, assemble or mix the parts and deliver the final product to market is known as the supply chain. The rapid growth of internet technologies allowed the onset of lots of emerging technologies applied in traceability systems, in the supply chain area. However, these systems tend to be centralized, monopolistic, asymmetric and opaque. As a consequence, these systems result in trust problems, such as fraud, corruption, tampering and falsifying information. Nowadays, a new technology called the blockchain presents a whole new approach based on decentralization. Nonetheless, by being in its early stages, it has some challenges to deal with, in which scalability and performance become mainly defiance to face the huge amount of data in the real world. This work is intended to provide a blockchain-based framework in order to facilitate the development of applications for traceability in supply chain management.
 \end{abstract}
      
 %\begin{resumo} 
