--- a/sbc-template.tex
+++ b/sbc-template.tex
@@ -3,7 +3,7 @@
 \usepackage{sbc-template}
 \usepackage{graphicx,url}
 \usepackage[utf8]{inputenc}
-\usepackage[brazil]{babel}
+\usepackage[english]{babel}
 %\usepackage[latin1]{inputenc}  
 \usepackage{xcolor}
 \usepackage{cleveref}
