--- a/sections/1_INTRODUCTION.tex
+++ b/sections/1_INTRODUCTION.tex
@@ -1,6 +1,6 @@
 \section{Introduction} \label{sec:Introduction}
 
-Hundreds of years ago, supply chains were fairly simple. Mines and farms provided natural resources to skilled craftsman like blacksmiths and Tailors who then created and sold finished products. Today's supply chains are much more complicated, fragmented and difficult to understand. Most of the time the various companies don't know about each other and a final consumer likely don't know anything about how, where, when or under what condition the products passed through. This isn't just a problem for consumers. Today's supply chains are so complex that even big industry players have difficulty tracking how their goods get made \cite{swan2015blockchain}.
+Hundreds of years ago, supply chains were fairly simple. Mines and farms provided natural resources to skilled craftsman like blacksmiths and tailors who then created and sold goods. Nowadays, supply chains are much more complicated, fragmented and difficult to understand. Most of the time, the various companies don't know about each other and a final consumer likely don't know anything about how, where, when or under what condition the products passed through. This isn't just a problem for consumers. Today's supply chains are so complex that even big industry players have difficulty tracking how their goods get made \cite{swan2015blockchain}.
 
 %{\color{red}adicionar aqui texto sobre o problema atual da cadeia de suprimento.}
 
