--- a/sections/5_CONCLUSION.tex
+++ b/sections/5_CONCLUSION.tex
@@ -1,9 +1,7 @@
 \section{Conclusion} \label{sec:Conclusion}
 
-Lately, Blockchain technology has been the subject of extensive research. Although some companies have launched pilot projects using blockchain technology to manage their supply chains, no detailed information on the technical implementation of such projects has been reported. Either way, the retail industry has the potential to use this technology to improve traceability.
+Lately, Blockchain technology has been the subject of extensive research. Although some companies have launched pilot projects using blockchain technology https://www.overleaf.com/project/5e5e5dae5f434f0001ed5707to manage their supply chains, no detailed information on the technical implementation of such projects has been reported. Either way, the retail industry has the potential to use this technology to improve traceability.
 
-Even if some properties of blockchain implementation may be useful for supply chain management, there are still few uses to support this claim. With so little research on this subject, it is difficult for industry stakeholders to understand exactly how blockchain technology can be used in their specific business.
+Even if some properties of blockchain implementation may be useful for supply chain management, there are still few uses to support this claim. 
 
-In this paper, was proposed a framework for new decentralized traceability systems based on blockchain technology. This system will deliver real-time information to all supply chain members on the safety status of goods, extremely reduce the risk of centralized information systems, and bring more secure, distributed, transparent, and collaborative to the supply chain management. The Framework can significantly improve development time of Supply Chain Management applications, and provide efficiency and transparency of products in a supply chain.
-
-While joining a blockchain consortium benefits all stakeholders, adopting a new technology such as blockchain is challenging for traditional industries due to the learning curve and cost of integrating blockchain into existing systems. Negotiating business details also takes time. In addition, the development of smart contracts must take into account quality and adaptability. Transparency and data sharing are most important in this regard. Overall, blockchain is a good option for providing traceability in supply chain management. However, the industry needs to look more closely at its risks and opportunities.
+In this paper, we proposed a framework for new decentralized traceability systems based on blockchain technology. This system will deliver online information to all supply chain members on the safety status of goods, providing more secure, distributed, transparent, and collaborative approach to supply chain management. The framework can significantly improve development time of Supply Chain Management applications, and provide efficiency and transparency for product management on a supply chain.
